Applying typo patch.

--- a/template.html
+++ b/template.html
@@ -55,19 +55,19 @@
                 <img src="IFGC/IFGC-logo-p&b.png" alt="logo">
                 <h2 id="apresentacao"><a href="#apresentacao"><span>Apresentação</span></a></h2>
                 <p>
-                  Esta página é dedicada ao campeonato <b>Inazuma Fighting Games Championship (IFGC)</b>, um torneio de jogos de lutas que será
-                  realizado como parte da mostra cultural japonesa, que ocorrerá durante a <b>Semana Educação de Ciência e Tecnologia (SECT)
-                  no IFPB - Campus João Pessoa</b>. A mostra cultural japonesa será dirigida pelo professor Doutor Luís Romeu Nunes,
-                  enquanto isso o campeonato contará com uma staff própria, sendo composta por:
+                  Esta página é dedicada ao campeonato <b>Inazuma Fighting Games Championship (IFGC)</b>, um torneio de jogos eletrônicos de luta que será
+                  realizado como parte da <b>Mostra de Cultura Japonesa do IFPB</b>, que ocorrerá durante a <b>Semana de Educação, Ciência e Tecnologia (SECT)
+                  no IFPB, Campus João Pessoa</b>. A referida mostra cultural será dirigida pelo Prof. Dr. Luís Romeu Nunes,
+                  enquanto o campeonato contará com uma staff própria, sendo composta por:
                   <ul style="list-style: disc">
-                    <li>Juan Pablo - Ex aluno do IFPB</li>
-                    <li>Fernando Morais - Ex aluno do IFPB</li>
-                    <li>Indefinido - Aluno monitor</li>
-                    <li>Indefinido - Aluno monitor</li>
+                    <li>Juan Pablo - Ex aluno do IFPB;</li>
+                    <li>Fernando de Morais - Ex aluno do IFPB;</li>
+                    <li>Indefinido - Aluno monitor;</li>
+                    <li>Indefinido - Aluno monitor.</li>
                   </ul>
                 </p>
                 <i>
-                  OBS.: A página será atualizada periódicamente com notícias sobre o avanço da organização do campeonato com os
+                  OBS.: A página será atualizada periodicamente com notícias sobre o avanço da organização do campeonato, com
                   informes necessários àqueles que pretendem participar.
                 </i>
                 <p></p>
@@ -78,10 +78,10 @@
                 <h2 id="historico"><a href="#formato"><span>Histórico de atualizações</span></a></h2>
                 <p>Data: 6 de julho 16:29</p>
                 <p>
-                  Os jogos que serão utilizados no campeonato ainda estão em processo de seleção, serão escolhidos dois jogos
-                  após um processo de votação aberto a todos os interessados no evento, através do seguinte
-                  <a href="https://forms.gle/6KAwW5fgVkxm3X519" style="color: #b8bb26">formulário</a> do google. Por favor votar apenas se houver interesse
-                  de participar, ou atender ao campeonato como espectador.
+                  Os jogos que serão utilizados no campeonato ainda estão em processo de seleção. Serão escolhidos dois jogos
+                  após votação aberta a todos os interessados no evento, por meio do seguinte
+                  <a href="https://forms.gle/6KAwW5fgVkxm3X519" style="color: #b8bb26">Formulário do Google</a>. Por favor, votar apenas se houver interesse
+                  em participar ou atender ao campeonato como espectador.
                 </p>
                 <p></p>
               </div>
