adding new page

--- a/fgc.html
+++ b/fgc.html
@@ -14,6 +14,12 @@
       h2 > a > span {
           padding-left: 10px;
       }
+      #breads > a {
+          color: #00a5ea;
+      }
+      #breads {
+          padding: 20px 0px 0px 20px;
+      }
   </style>
   <script>
       const alwaysLightMode = false;
@@ -102,6 +108,7 @@
       </div>
     </aside>
     <section class="flex-1 dark:bg-dark-700">
+      <div id="breads">Você esta aqui: <a href="index.html">PÁGINA INICIAL</a> > <a>IFJP</a></div>
       <div class="max-w-screen-lg px-8 sm:px-16 lg:px-24">
         <section class="mt-8 md:mt-16">
           <section class="docs_main max-w-prose">
