adding responsive menu for mobile viewport

--- a/fgc.html
+++ b/fgc.html
@@ -112,6 +112,23 @@
       <div class="max-w-screen-lg px-8 sm:px-16 lg:px-24">
         <section class="mt-8 md:mt-16">
           <section class="docs_main max-w-prose">
+            <div class="lg:hidden">
+              <div class="relative mx-auto w-full py-10 bg-white transition duration-200 dark:bg-dark-700" style="padding-top: 0 !important;">
+                <div class="relative p-8 bg-white docs_sidebar dark:bg-dark-600" style="padding-top: 0 !important;">
+                  <ul>
+                    <li onclick="location.href = '#apresentacao'">
+                      <h2>Apresentação</h2>
+                    </li>
+                    <li onclick="location.href = '#calendario'">
+                      <h2>Calendário</h2>
+                    </li>
+                    <li onclick="location.href = '#formato'">
+                      <h2>Formato</h2>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <div id="main-content">
               <img src="IFGC/IFGC-logo-p&b.png" alt="logo">
               <h2 id="apresentacao"><a href="#apresentacao"><span>Apresentação</span></a></h2>
