--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <nav id="indexed-nav" class="hidden lg:block lg:mt-4">
             <div class="docs_sidebar">
               <ul>
+                <li onclick="location.href = 'index.html'">
+                  <h2>Página Inicial</h2>
+                </li>
                 <li onclick="location.href = 'fgc.html'">
                   <h2>IFJP (Campeonato de Jogos)</h2>
                 </li>
@@ -105,6 +108,26 @@
           <section class="docs_main max-w-prose">
             <div id="main-content">
               <h1>Mostra cultural japonesa do IFPB - Campus João Pessoa</h1>
+            </div>
+            <div class="lg:hidden">
+              <div class="relative mx-auto w-full py-10 bg-white transition duration-200 dark:bg-dark-700">
+                <div class="relative p-8 bg-white docs_sidebar dark:bg-dark-600" style="padding-top: 0 !important;">
+                  <ul>
+                    <li onclick="location.href = 'index.html'">
+                      <h2>Página Inicial</h2>
+                    </li>
+                    <li onclick="location.href = 'fgc.html'">
+                      <h2>IFJP (Campeonato de Jogos)</h2>
+                    </li>
+                    <li onclick="">
+                      <h2>Ikebana</h2>
+                    </li>
+                    <li onclick="">
+                      <h2>Campeonato de hashi</h2>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </section>
         </section>
